Add button to clear log

--- a/socketio_client.html
+++ b/socketio_client.html
@@ -9,6 +9,7 @@
 			<!-- <h1>SocketIO Client</h1> -->
 			<button type="button" name="btn_send" id="btn_send">Send</button>
 			<button type="button" name="btn_echo" id="btn_echo">Echo</button>
+			<button type="button" name="btn_clear" id="btn_clear">Clear</button>
 		</div>
 		<div>
 			<h4>Log:</h4>
